@@ -1,7 +1,7 @@
 /****************************************************************************
- * examples/elf/tests/hello/hello.c
+ * examples/posix_spawn/filesystem/hello/hello.c
  *
- *   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
