@@ -1,7 +1,7 @@
 /****************************************************************************
- * examples/elf/tests/hello/hello.c
+ * examples/posix_spawn/filesystem/redirect/redirect.c
  *
- *   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -38,7 +38,6 @@
  ****************************************************************************/
 
 #include <stdio.h>
-#include <stdlib.h>
 
 /****************************************************************************
  * Public Functions
@@ -46,33 +45,19 @@
 
 int main(int argc, char **argv)
 {
-  int i;
+  int ch;
 
-  /* Mandatory "Hello, world!" */
+  printf("Entering the stdin redirection test\n");
 
-  puts("Getting ready to say \"Hello, world\"\n");
-  printf("Hello, world!\n");
-  puts("It has been said.\n");
+  /* stdin should have been redirected to testdata.txt.  Read and print until
+   * we hit the end of file.
+   */
 
-  /* Print arguments */
-
-  printf("argc\t= %d\n", argc);
-  printf("argv\t= 0x%p\n", argv);
-
-  for (i = 0; i < argc; i++)
+  while ((ch = getchar()) != EOF)
     {
-      printf("argv[%d]\t= ", i);
-      if (argv[i])
-        {
-          printf("(0x%p) \"%s\"\n", argv[i], argv[i]);
-        }
-      else
-        {
-          printf("NULL?\n");
-        }
+      putchar(ch);
     }
 
-  printf("argv[%d]\t= 0x%p\n", argc, argv[argc]);
-  printf("Goodbye, world!\n");
+  printf("Exit-ing the stdin redirection test\n");
   return 0;
 }
